--- a/02-do-text-mining.ipynb
+++ b/02-do-text-mining.ipynb
@@ -72,10 +72,6 @@
     "    full_relationship_set.update(relationship_list)\n",
     "        \n",
     "print(relationships)\n",
-    "#print()\n",
-    "#print(relationships_dict)\n",
-    "#print()\n",
-    "#print(relationships_dict_reverse)\n",
     "\n",
     "words_need_our = [\"child\", \"children\", \"kid\", \"kids\", \"son\", \"sons\", \"daughter\", \"daughters\"]\n",
     "\n",
@@ -103,10 +99,6 @@
    "source": [
     "#metros = ['Boston', 'Portland', 'Austin', 'Orlando', 'Atlanta', 'Vancouver', 'Columbus', 'Boulder']\n",
     "\n",
-    "# metro = 'Vancouver'\n",
-    "# metro_reviews = pd.read_csv(\"small_reviews/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
-    "# metro_reviews = pd.read_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
-    "#metro_reviews.head(3)\n",
     "metro_reviews = pd.read_csv(r\"small_reviews_urbcomp/yelp_academic_dataset_reviews_Boulder.csv\")"
    ]
   },
@@ -297,8 +289,7 @@
     "    reviews_subset = metro_reviews[metro_reviews[\"business_id\"] == business_id]\n",
     "    reviews_subset_counts = reviews_subset.text_clean.str.split().explode().value_counts().reset_index()\n",
     "    x = reviews_subset_counts[reviews_subset_counts[\"index\"].isin(full_relationship_set_new)]\n",
-    "#     print(x)\n",
-    "#     break\n",
+    "\n",
     "    df_row = [business_id, len(reviews_subset)] + [0 for key in relationship_categories]\n",
     "    df_row_ungroup = [business_id, len(reviews_subset)] + [0 for key in relationship_categories_ungroup]\n",
     "\n",
@@ -333,9 +324,7 @@
    "outputs": [],
    "source": [
     "relationship_df.to_csv(r\"output_urbcomp/699counts_v2.csv\", index=False)\n",
-    "relationship_df_ungroup.to_csv(r\"output_urbcomp/699counts_ungrouped_v2.csv\", index=False)\n",
-    "# relationship_df.to_csv(\"output/\" + metro + \"_counts_v2.csv\", index=False)\n",
-    "# relationship_df_ungroup.to_csv(\"output/\" + metro + \"_counts_ungrouped_v2.csv\", index=False)"
+    "relationship_df_ungroup.to_csv(r\"output_urbcomp/699counts_ungrouped_v2.csv\", index=False)"
    ]
   }
  ],
