--- a/03-process-counts.ipynb
+++ b/03-process-counts.ipynb
@@ -41,7 +41,6 @@
    "outputs": [],
    "source": [
     "#metros = ['Boston', 'Portland', 'Austin', 'Orlando', 'Atlanta', 'Vancouver', 'Columbus', 'Boulder']\n",
-    "\n",
     "metro = 'Boulder'\n",
     "relationship_df_raw = pd.read_csv(\"output_urbcomp/\" + metro + \"_counts_v2.csv\")"
    ]
@@ -168,57 +167,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ywqcgiVfX3sorqlKs1nhLw</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5P3b82EqZqR7lCqAYj-zaQ</td>\n",
-       "      <td>254</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>3 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -226,24 +177,18 @@
        "0  8zehGz9jnxPqXtOc7KaJxA          931                     187     2    0   \n",
        "1  i9BDFBYcl_PGqrLbQUdMvg          207                      22     0    0   \n",
        "2  GZgOQOlFVLgNMHBBjspHRw           43                       1     0    0   \n",
-       "3  ywqcgiVfX3sorqlKs1nhLw           20                       0     0    0   \n",
-       "4  5P3b82EqZqR7lCqAYj-zaQ          254                      35     0    0   \n",
        "\n",
        "   boo  boss  boyfriend  brother  child  ...  partner  professor  \\\n",
        "0    0     1         16        1      0  ...        5          0   \n",
        "1    0     0          3        0      0  ...        0          0   \n",
        "2    0     0          0        0      0  ...        0          0   \n",
-       "3    0     0          0        0      0  ...        0          0   \n",
-       "4    0     0          3        0      0  ...        0          0   \n",
        "\n",
        "   relationship  siblings  sister  son  spouse  teacher  uncle  wife  \n",
        "0             0         0       2    9       0        0      0    37  \n",
        "1             0         0       1    0       0        0      0     1  \n",
        "2             0         0       0    0       0        0      0     0  \n",
-       "3             0         0       0    0       0        0      0     0  \n",
-       "4             0         0       0    0       0        0      0     7  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[3 rows x 41 columns]"
       ]
      },
      "execution_count": 3,
@@ -252,7 +197,7 @@
     }
    ],
    "source": [
-    "relationship_df_raw.head()"
+    "relationship_df_raw.head(3)"
    ]
   },
   {
@@ -807,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -927,120 +872,59 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Nhw7on5kevbomM-GzRXy_A</td>\n",
-       "      <td>Texas Global Passport Services</td>\n",
-       "      <td>Colleges &amp; Universities, Education, Hotels &amp; T...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>112</td>\n",
-       "      <td>2400 Nueces St, Ste B (Fl 2)</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>-97.743246</td>\n",
-       "      <td>30.287984</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6MEqn13ZdrP6Icc2p2qb2g</td>\n",
-       "      <td>Feitoza Service</td>\n",
-       "      <td>Wallpapering, Home Services</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chelsea</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>-71.032828</td>\n",
-       "      <td>42.391764</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
+       "<p>3 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              business_id                            name  \\\n",
-       "0  N3_Gs3DnX4k9SgpwJxdEfw       Lane Wells Jewelry Repair   \n",
-       "1  NVfOn7TdnHbaGH97CVB_Qg           McKinley Chiropractic   \n",
-       "2  Xw8tuI30T-xihpzwBV-zJg                    El Pollo Rey   \n",
-       "3  Nhw7on5kevbomM-GzRXy_A  Texas Global Passport Services   \n",
-       "4  6MEqn13ZdrP6Icc2p2qb2g                 Feitoza Service   \n",
+       "              business_id                       name  \\\n",
+       "0  N3_Gs3DnX4k9SgpwJxdEfw  Lane Wells Jewelry Repair   \n",
+       "1  NVfOn7TdnHbaGH97CVB_Qg      McKinley Chiropractic   \n",
+       "2  Xw8tuI30T-xihpzwBV-zJg               El Pollo Rey   \n",
        "\n",
        "                                          categories  stars  review_count  \\\n",
        "0  Shopping, Jewelry Repair, Appraisal Services, ...      5            30   \n",
        "1                    Chiropractors, Health & Medical      5             5   \n",
        "2  Food Trucks, Restaurants, Specialty Food, Food...      5            11   \n",
-       "3  Colleges & Universities, Education, Hotels & T...      5           112   \n",
-       "4                        Wallpapering, Home Services      5            15   \n",
        "\n",
-       "                        address     city state  longitude   latitude  ...  \\\n",
-       "0   7801 N Lamar Blvd, Ste A140   Austin    TX -97.711458  30.346169  ...   \n",
-       "1        5625 Eiger Rd, Ste 160   Austin    TX -97.857409  30.244902  ...   \n",
-       "2           1725 E Riverside Dr   Austin    TX -97.730141  30.243493  ...   \n",
-       "3  2400 Nueces St, Ste B (Fl 2)   Austin    TX -97.743246  30.287984  ...   \n",
-       "4                           NaN  Chelsea    MA -71.032828  42.391764  ...   \n",
+       "                       address    city state  longitude   latitude  ...  \\\n",
+       "0  7801 N Lamar Blvd, Ste A140  Austin    TX -97.711458  30.346169  ...   \n",
+       "1       5625 Eiger Rd, Ste 160  Austin    TX -97.857409  30.244902  ...   \n",
+       "2          1725 E Riverside Dr  Austin    TX -97.730141  30.243493  ...   \n",
        "\n",
        "  is_localflavor  is_localservices  is_massmedia  is_nightlife  is_pets  \\\n",
        "0          False              True         False         False    False   \n",
        "1          False             False         False         False    False   \n",
        "2          False             False         False         False    False   \n",
-       "3          False             False         False         False    False   \n",
-       "4          False             False         False         False    False   \n",
        "\n",
        "   is_professional  is_publicservicesgovt  is_religiousorgs  is_restaurants  \\\n",
        "0            False                  False             False           False   \n",
        "1            False                  False             False           False   \n",
        "2            False                  False             False            True   \n",
-       "3            False                   True             False           False   \n",
-       "4            False                  False             False           False   \n",
        "\n",
        "   is_shopping  \n",
        "0         True  \n",
        "1        False  \n",
        "2        False  \n",
-       "3        False  \n",
-       "4        False  \n",
        "\n",
-       "[5 rows x 33 columns]"
+       "[3 rows x 33 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create indicator columns for each business category (a business may belong to multiple categories)\n",
-    "#businesses = pd.read_csv(\"yelp_academic_dataset_business_clean.csv\")\n",
     "businesses = pd.read_csv(\"YelpChallengeWMetros_Clean.csv\", encoding='latin-1')\n",
     "businesses = businesses.rename(columns={\"business\": \"business_id\"})\n",
     "\n",
     "for category_str in categories_of_interest:\n",
     "    colname = \"is_\" + category_dict_reverse[category_str]\n",
     "    businesses[colname] = businesses[\"categories\"].str.contains(category_str).fillna(False)\n",
-    "businesses.head()"
+    "businesses.head(3)"
    ]
   },
   {
@@ -1052,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1085,7 @@
        "[3 rows x 81 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1246,7 @@
        "[3 rows x 77 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
