--- a/01-get-data-by-metro.ipynb
+++ b/01-get-data-by-metro.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "## 1.2. Dataset for Each Metro\n",
     "\n",
-    "#### Due to Yelp review dataset size, the remainder of this notebook is unused for this demonstration. If you were to continue this work beyond this demo, we have included some advice on processing the Yelp dataset from scratch in the README."
+    "#### Due to Yelp review dataset size, the remainder of this notebook (Section 1.2.) is unused for this demonstration. If you were to continue this work beyond this demo, we have included some advice on processing the Yelp dataset from scratch in the README."
    ]
   },
   {
@@ -227,25 +227,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_total_reviews' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-ba4fbad53a61>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnum_total_reviews\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'num_total_reviews' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -265,19 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "84776d96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Boston', 'Portland', 'Austin', 'Orlando', 'Atlanta', 'Vancouver', 'Columbus', 'Boulder']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(metros)"
+    "def check_results():\n",
+    "    print(metros)\n",
+    "    lengths = [len(metro_reviews[metro]) for metro in metros]\n",
+    "    print(lengths)\n",
+    "    print(sum(lengths))\n",
+    "    print(num_total_reviews)"
    ]
   },
   {
@@ -296,10 +275,7 @@
     }
    ],
    "source": [
-    "lengths = [len(metro_reviews[metro]) for metro in metros]\n",
-    "print(lengths)\n",
-    "print(sum(lengths))\n",
-    "print(num_total_reviews)"
+    "#check_results()"
    ]
   }
  ],
